# GamblingGladiator

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  build.sh  flake.nix  hot-reload.bat  hot-reload.sh  setup-msys2.ps1  tick-implementation-suggestion.txt
.github/workflows/: build.yml
cmake/: CopyMsys2RuntimeDeps.cmake
src/: CMakeLists.txt  main.cpp
src/dedicated_server/: CMakeLists.txt  main.c  server_tick.c  server_tick.h
src/game/: CMakeLists.txt  main.c
src/game/dll/: CMakeLists.txt  gambling_gladiator_dll.c  game_renderer.c  game_renderer.h  player_tick.c  player_tick.h
src/game/exe/: CMakeLists.txt  dll_loader.c  dll_loader.h  game_dll.h  main.c
src/game/include/: game.h  game_types.h
src/include/: game_types.h
src/network/client/: CMakeLists.txt  client.c  client.h  client_config.c  client_config.h
src/network/include/: error_codes.h  net_com.h  net_com_types.h  ring_buf.h
src/network/server/: CMakeLists.txt  server.c  server.h  server_config.c  server_config.h
src/network/thread/: CMakeLists.txt  thread.c  thread.h
src/os_utils/: CMakeLists.txt  os_utils.c  os_utils.h
